@@ -119,6 +119,7 @@ Other Changes:
   Note that IsItemDeactivatedAfterEdit() was not affected, only IsItemEdited).
 - Misc: standardized casing of keyboard mods in comments and demo, showing
   as e.g. "Ctrl" instead of "CTRL".
+- CI: Added Dear ImGui Test Suite to CI builds. [@rokups]
 - Drag and Drop:
   - Added ImGuiDragDropFlags_AcceptDrawAsHovered to make accepting item render
     as hovered, which can allow using e.g. Button() as drop target. (#8632)
